--- a/.github/workflows/quality-assurance.yaml
+++ b/.github/workflows/quality-assurance.yaml
@@ -17,4 +17,4 @@ jobs:
                 with:
                     key: ${{ runner.os }}-docker-${{ hashFiles('Makefile') }}
             -
-                run: make lint
+                run: make test
